PLS-12885, PLS-13261 - joined String and Alpha Enum operators, and also Numerical/Enum operators where applicable - added Chips control to alpha/numerical/enum types in Query Builder when operation is EQUAL/IN_COLLECTION and NOT_EQUAL/NOT_IN_COLLECTION - fixed numerous bugs in advanced query builder, tons of code refactoring, and adjusted css to fix alignment issues - Coded new features for Chips component such as better handling for async data loading, more advanced sorting behavior, component integration by using context and name args, and other bug fixes, while attemping to make everything backwards compatible.

--- a/le-ui/projects/common/components/datacloud/query/advanced/advanced.component.scss
+++ b/le-ui/projects/common/components/datacloud/query/advanced/advanced.component.scss
@@ -205,8 +205,7 @@ div.advanced-query-builder {
             }
 
             &:last-child i {
-                margin-left: 0.1em;
-                margin-right: 0.35em;
+                margin-left: 0.2em;
             }
         }
     }
