--- a/le-ui/projects/common/components/datacloud/query/advanced/tree/tree.component.scss
+++ b/le-ui/projects/common/components/datacloud/query/advanced/tree/tree.component.scss
@@ -193,7 +193,7 @@ div.advanced-query-builder {
             border-right: 1px solid #ddd;
             display: flex;
             cursor: default;
-            z-index: 1;
+            // z-index: 1;
             border-top-left-radius: 2px;
             border-bottom-left-radius: 2px;
             
@@ -355,15 +355,61 @@ div.advanced-query-builder {
 //                         display: inline-block;
                         margin: 0px .5em 0 0;
                         
+                        numerical-range-directive {
+                            .numerical-container.range-container {
+                                display: inline-block;
+                                padding: 0;
+                            }
+                            span {
+                                padding-top: 0.3em;
+                            }
+                        }
+
                         .button-group {
                             overflow: hidden;
                             margin-top: 0px;
+                            border: 1px solid #d0d0d0;
+                            border-radius: 3px;
+                            height: 2.2em;
                             
                             button {
-                                padding: 0;
-                                height: 1.65em;
                                 font-size: 11px;
                                 line-height: 1;
+                                padding: 2px;
+                                height: 2em;
+                                margin: 1px;
+                                border: none;
+                                border-radius: 3px;
+                            }
+                        }
+
+                        chips {
+                            float: right;
+                            
+                            .chips-query-container .chips-container {
+                                margin-bottom: 0;
+
+                                .chip {
+                                    margin: 0 3px 5px 0;
+                                }
+                            }
+                            .ng-search {
+                                height: 2.2em;
+                            }
+
+                            .text-container.dropdown {
+                                .icon-button {
+                                    padding: 0em 0.5em;
+                                    line-height: 2.1em;
+                                }
+                                
+                                input {
+                                    padding: 0;
+                                    margin-bottom: 0;
+                                    width: 100%;
+                                    height: 100%;
+                                    border: none;
+                                }
                             }
                         }
 
@@ -376,14 +422,23 @@ div.advanced-query-builder {
                         }
 
                         select {
-                            height: 1.65em;
                             margin-right: 1em;
                             max-width: 45em;
                             font-size: 12px;
                         }
 
+                        input,
+                        select {
+                            height: 2.2em;
+                            padding: 4px;
+                            border-radius: 3px;
+                            border-color: #d0d0d0;
+                            border-width: 1px;
+                            border-style: solid;
+                        }
+
                         span.operation-and {
-                            margin: .25em;
+                            // margin: .25em;
                             font-weight: bold;
                         }
 
